--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@azure/msal-angular": "^2.5.4",
     "@azure/msal-browser": "^2.34.0",
     "bootstrap": "^5.2.3",
+    "cors": "^2.8.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
