--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^15.2.0",
     "@azure/msal-angular": "^2.5.4",
     "@azure/msal-browser": "^2.34.0",
+    "alertifyjs": "^1.13.1",
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "rxjs": "~7.8.0",
